# databricks-examples

./: .gitignore  LICENSE  README.md
agent_bricks_ka_example/: .env.template  .gitignore  README.md  requirements.txt
agent_bricks_ka_example/src/: 00_setup_sec_documents.py  (+7 more)
agentbricks_oai_sdk_multi_agent_demo/: .env.example  .gitignore  LICENSE  README-agent.md  README-data-pipeline.md  README-execution.md  README-sdp-ai-functions.md  README.md  pyproject.toml
agentbricks_oai_sdk_multi_agent_demo/app/: app.yaml  databricks.yml  pyproject.toml
agentbricks_oai_sdk_multi_agent_demo/app/agent_server/: __init__.py  agent.py  start_server.py  utils.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/: __init__.py  config.py  run_sequence.py  run_workspace_notebooks.py  sync_workspace.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/agent_src/: __init__.py  deploy_agent_app.py  test_agent.py  test_deployed_agent_app.py  test_services.py  trace_validator.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/agentbricks_ka_src/: ka_config.py  ka_manager.py  run_ka_sequence.py  step01_create_ka.py  step02_sync_ka_sources.py  step03_test_ka.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/data_engg_src/: __init__.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/data_engg_src/ingest/: __init__.py  load_stock_data.py  refresh_stock_prices.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/data_engg_src/serve/: __init__.py  create_genie_space.py  create_stock_views.py  create_uc_functions.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/data_engg_src/setup/: __init__.py  setup_sec_documents.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/data_engg_src/transform/: __init__.py  deploy_sdp_pipeline.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/data_engg_src/transform/sdp_pipeline_src/: 00_bronze_stock_initial.py  00_company_registry.py  01_bronze_parsed_documents.sql  02_silver_financial_metrics.sql  03_gold_company_financials.sql  04_gold_revenue_segments.sql  05_gold_revenue_geography.sql  06_silver_stock_daily.sql  07_gold_stock_summary.sql  databricks.yml
agentbricks_oai_sdk_multi_agent_demo/notebooks/demo_cleanup_src/: cleanup_all.py  cleanup_app.py  cleanup_genie.py  cleanup_ka.py  cleanup_tables.py
agentbricks_oai_sdk_multi_agent_demo/notebooks/demo_shared/: __init__.py  api_client.py  bootstrap.py  config_manager.py  paths.py  subprocess_runner.py
ai_agent_metadata_extract/: .env.template  01_extract_ai_endpoints_detailed.py  02_generate_endpoint_analysis_report.py  03_extract_ai_endpoints_fast.py  04_extract_knowledge_assistants.py  05_extract_knowledge_assistants_fast.py  README.md
databricks_claude_agent_sdk_example/: .gitignore  README.md  SETUP.md  requirements.txt
python_udfs_custom_dependencies/: README.md  requirements.txt
(+10 files in other folders)
