[project]
name = "sec-financial-analyst-agent"
version = "0.1.0"
description = "SEC Financial Analyst Multi-Agent Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-openai>=0.11.0",
    "databricks-agents>=1.9.3",
    "databricks-sdk>=0.40.0",
    "mlflow>=3.10.0",
    "openai-agents>=0.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server"]

[project.scripts]
start-server = "agent_server.start_server:main"
